<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/login"
        android:id="@+id/loginImage"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/username"
        android:layout_below="@+id/loginImage"
        android:padding="10dp"
        android:singleLine="true"
        />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_below="@+id/editText1"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxShowPassword"
        android:id="@+id/showPass"
        android:checked="false"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/editText2"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerInParent="true"
        android:text="@string/buttonGo"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgotPassword"
        android:textSize="16dip"
        android:textColor="#0b84aa"
        android:layout_below="@+id/login"
        android:layout_alignParentStart="true" />

    <!--<TextView
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:id="@+id/loginErrorMsg"
        android:textColor="#000000"
        android:layout_below="@+id/forgotPassword"
        android:layout_alignParentLeft="true"/>-->

</RelativeLayout>

